2014-10-01  Edward Smith-Rowland  <3dw4rd@verizon.net>

	Implement SD-6: SG10 Feature Test Recommendations
	* g++.dg/cpp1y/feat-cxx11-neg.C: New.
	* g++.dg/cpp1y/feat-cxx11.C: New.
	* g++.dg/cpp1y/feat-cxx14.C: New.
	* g++.dg/cpp1y/feat-cxx98.C: New.
	* g++.dg/cpp1y/feat-cxx98-neg.C: New.
	* g++.dg/cpp1y/phoobhar.h: New.
	* g++.dg/cpp1y/testinc/phoobhar.h: New.

2014-09-30  Teresa Johnson  <tejohnson@google.com>

	* gcc.dg/tree-prof/20050826-2.c: New test.
	* gcc.dg/tree-prof/cmpsf-1.c: Ditto.

2014-09-30  Manuel López-Ibáñez  <manu@gcc.gnu.org>

       PR c++/16564
       * lib/gcc.exp: Accept "fatal error:" as error prefix.
       * lib/g++.exp: Likewise.
       * lib/obj-c++.exp: Likewise.
       * lib/objc.exp: Likewise.
       * g++.dg/template/pr16564.C: New test.

2014-09-30  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/16564
	* g++.dg/cpp0x/decltype26.C: Adjust.
	* g++.dg/cpp0x/decltype28.C: Likewise.
	* g++.dg/cpp0x/decltype29.C: Likewise.
	* g++.dg/cpp0x/decltype32.C: Likewise.
	* g++.dg/cpp0x/enum11.C: Likewise.
	* g++.dg/template/arrow1.C: Likewise.
	* g++.dg/template/pr23510.C: Likewise.
	* g++.dg/template/recurse.C: Likewise.
	* g++.dg/template/recurse2.C: Likewise.
	* g++.dg/template/vtable2.C: Likewise.
	* g++.old-deja/g++.pt/infinite1.C: Likewise.

2014-09-30  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR preprocessor/58893
	* gcc.dg/pr58893.c: New test case.
	* gcc.dg/pr58893-0.h: New include.

2014-09-30  Ilya Tocar  <ilya.tocar@intel.com>

	PR middle-end/62120
	* gcc.target/i386/avx512f-additional-reg-names.c: Use register valid
	in 32-bit mode.
	* gcc.target/i386/pr62120.c: New.

2014-09-30  James Greenhalgh  <james.greenhalgh@arm.com>

	* gcc.target/aarch64/simd/vqdmullh_laneq_s16.c: New.
	* gcc.target/aarch64/simd/vqdmulls_laneq_s32.c: Likewise.
	* gcc.target/aarch64/simd/vqdmulls_lane_s32.c: Fix return type.
	* gcc.target/aarch64/scalar_intrinsics.c (test_vqdmulls_s32):  Fix
	return type.
