@@ -1,3 +1,8 @@
+2014-10-01  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>
+
+	* lib/target-supports.exp: error out with preprocessor condition
+	instead of FOO everywhere.
+
 2014-10-01  Edward Smith-Rowland  <3dw4rd@verizon.net>
 
 	Implement SD-6: SG10 Feature Test Recommendations
